--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 							</div>
 							<div class="hover-state">
 								<div class="align-vertical">
-									<h1 class="text-white"><strong>Project 1</strong>&nbsp;Lorem ipsum</h1>
+									<h1 class="text-white"><strong>Project 1</strong></h1>
 									<p class="text-white">First Web Page made with HTML5 and CSS3</p>
 									<a href="https://gar18.github.io/FirstWebPage/" target="_blank" class="btn btn-primary btn-white">See Project</a>
 								</div>
@@ -219,7 +219,7 @@
 							</div>
 							<div class="hover-state">
 								<div class="align-vertical">
-									<h1 class="text-white"><strong>Project 2</strong>&nbsp;Dolor sit</h1>
+									<h1 class="text-white"><strong>Project 2</strong></h1>
 									<p class="text-white">Functioning of webpage using Javascript and jQuery</p>
 									<a href="https://gar18.github.io/Js-and-JQuery/" target="_blank" class="btn btn-primary btn-white">See Project</a>
 								</div>
