--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
 							</div>
 							<div class="hover-state">
 								<div class="align-vertical">
-									<h1 class="text-white"><strong>Project 1</strong></h1>
-									<p class="text-white">First Web Page made with HTML5 and CSS3</p>
+									<h1 class="text-white"><strong>First Web Page</strong></h1>
+									<p class="text-white">Made with HTML5 and CSS3</p>
 									<a href="https://gar18.github.io/FirstWebPage/" target="_blank" class="btn btn-primary btn-white">See Project</a>
 								</div>
 							</div>
@@ -219,7 +219,7 @@
 							</div>
 							<div class="hover-state">
 								<div class="align-vertical">
-									<h1 class="text-white"><strong>Project 2</strong></h1>
+									<h1 class="text-white"><strong>E-commerce</strong></h1>
 									<p class="text-white">Functioning of webpage using Javascript and jQuery</p>
 									<a href="https://gar18.github.io/Js-and-JQuery/" target="_blank" class="btn btn-primary btn-white">See Project</a>
 								</div>
@@ -232,8 +232,8 @@
 							</div>
 							<div class="hover-state">
 								<div class="align-vertical">
-									<h1 class="text-white">Project 3</h1>
-									<p class="text-white">Weather app</p>
+									<h1 class="text-white">Weather app</h1>
+									<p class="text-white">Using api's</p>
 									<a href="https://gar18.github.io/Weather/" target="_blank" class="btn btn-primary btn-white">See Project</a>
 								</div>
 							</div>
@@ -245,7 +245,7 @@
 							</div>
 							<div class="hover-state">
 								<div class="align-vertical">
-									<h1 class="text-white">Project 4</h1>
+									<h1 class="text-white">CRUD App</h1>
 									<p class="text-white">Create, Recieve, Update and Delete</p>
 									<a href="https://create-update.herokuapp.com/" target="_blank" class="btn btn-primary btn-white">See Project</a>
 								</div>
@@ -258,8 +258,8 @@
 							</div>
 							<div class="hover-state">
 								<div class="align-vertical">
-									<h1 class="text-white">Project 5</h1>
-									<p class="text-white">Game Of Life</p>
+									<h1 class="text-white">Game OF Life</h1>
+									<p class="text-white">A Simulation and Interactive Game</p>
 									<a href="https://game-0-life.herokuapp.com/" target="_blank" class="btn btn-primary btn-white">See Project</a>
 								</div>
 							</div>
