--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 							</div>
 							<div class="hover-state">
 								<div class="align-vertical">
-									<h1 class="text-white"><strong>First Web Page</strong></h1>
+									<h1 class="text-white"><strong>My First Web Page</strong></h1>
 									<p class="text-white">Made with HTML5 and CSS3</p>
 									<a href="https://gar18.github.io/FirstWebPage/" target="_blank" class="btn btn-primary btn-white">See Project</a>
 								</div>
