--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
 								<div class="pull-right">
 									<h5>Game Design</h5>
 									<p>
-										When I have the chance, I'd like to make an MMORPG games. Cause I feel like that's where most people's fantasies can 
+										When I have the chance, I'd like to make  MMORPG games. Cause I feel like that's where most people's fantasies can 
 										come to life, be who they want to be with no-one to critisize.
 									</p>
 								</div>
@@ -198,7 +198,7 @@
 								<div class="pull-right">
 									<h5>Awesome personality</h5>
 									<p>
-										I am opiniated but I will never force my opinion, and I love to discuss. I'm always be willing to learn hence juggling so many courses.
+										I am opiniated but I will never force my opinion, and I love to discuss. I'm always willing to learn hence juggling so many courses.
 										I love working in teams but I can also work alone. I love a good game session(Console or board games).
 
 									</p>
