--- a/about.html
+++ b/about.html
@@ -222,11 +222,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<span class="text-white">© 2019 Gaarith Hendricks.</span>
-							<br>
-							<br>
 							<i class="icon text-white icon_mail"></i>
-							<a href="contact.html" class="text-white"><span class="text-white"> Get in touch with me <i class="icon arrow_right"></i></span></a>
+							<a href="contact.html" class="text-white"><span class="text-white"> Get in touch<i class="icon arrow_right"></i></span></a>
+							<br>
+							<br>
+							<span class="text-white">© 2019 Gaarith Hendricks </span>
 						</div>
 					</div>
 				</div>
