--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 								<div class="align-vertical">
 									<h1 class="text-white"><strong>E-commerce</strong></h1>
 									<p class="text-white">Functioning of webpage using Javascript and jQuery</p>
-									<a href="https://gar18.github.io/Js-and-JQuery.io/" target="_blank" class="btn btn-primary btn-white">See Project</a>
+									<a href="https://gar18.github.io/Js-and-JQuery/" target="_blank" class="btn btn-primary btn-white">See Project</a>
 									<button type="button" class="collapsible btn btn-primary btn-white">Details</button>
 										<div class="content">
  						 					<p style="color: rgb(255, 255, 255);">This Task we had to make an E-commerce Page which actually had functioning such as adding to a cart.
