--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
 									<a href="https://gar18.github.io/Weather/" target="_blank" class="btn btn-primary btn-white">See Project</a>
 									<button type="button" class="collapsible btn btn-primary btn-white">Details</button>
 										<div class="content">
- 						 					<p style="color: rgb(243, 243, 243);">Lorem ipsum...</p>
+ 						 					<p style="color: rgb(243, 243, 243);">This is a weather app using an API, problem right now with this
+												app is that i've used a google api and it has a billing account. So until I change the api it 
+											will not get the weather unfortunately.</p>
 										</div>
 								</div>
 							</div>
