--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
 							<h1>Why am I doing coding?</h1>
 							<h6>Because I want to make a difference in the world</h6>
 							<p class="lead">
-								Through coding I believe I can bring new solitions to the table and new products which can influence the world in a positive way.
+								Through coding I believe I can bring new solutions to the table and new products which can influence the world in a positive way.
 							</p>
 						</div>
 						
@@ -138,7 +138,7 @@
 								<div class="pull-right">
 									<h5>Web Design</h5>
 									<p>
-										When I design, I design for perfection. I might not be the greatest designer, but I sure will strive to be.
+										When I design, I design for perfection. I might not be the greatest designer, but I will strive to be.
 									</p>
 								</div>
 							</div>
