--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
 									<button type="button" class="collapsible btn btn-primary btn-white">Details</button>
 										<div class="content">
  						 					<p style="color: rgb(255, 255, 255);">This Task we had to make an E-commerce Page which actually had functioning such as adding to a cart.
-												  This task took quite awhile and quite alot of figuring out.
+												  This task took quite awhile and quite alot of figuring out. I did struggle more with the design, cause functioning was
+												key in this task.
 											  </p>
 										</div>
 								</div>
