--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
 		<![endif]-->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700%7CRaleway:700' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" href="favicon2.png" >
+	    <script src="https://kit.fontawesome.com/yourcode.js"></script>
         <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
