--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
 									<button type="button" class="collapsible btn btn-primary btn-white">Details</button>
 										<div class="content">
  						 					<p style="color: rgb(243, 243, 243);">The requirements for this task was that we had to make a Shopping Web Page And that it looks
-												  like an actual Page.
+												  like an actual Page. There are some faults such as the fonts and colors are a bit weird. But thats
+												all left intentionally.
 											  </p>
 										</div>
 								</div>
