--- a/index.html
+++ b/index.html
@@ -395,7 +395,9 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<i class="icon text-white icon_mail"></i>
-							<a href="contact.html" class="text-white"><span class="text-white"> Get in touch  <i class="icon arrow_right"></i></span></a><i class="fa fa-github"></i>
+							<a href="contact.html" class="text-white"><span class="text-white"> Get in touch  <i class="icon arrow_right"></i></span></a>
+							<a href="https://github.com/gar18/"> <i class="fa fa-github fa-4x"></i></a>
+							<a href="www.linkedin.com/in/gaarith-hendricks-544877195"> <i class="fa fa-linkedin-square fa-4x"></i></a>
 							<br>
 							<br>
 							<span class="text-white">© 2019 Gaarith Hendricks </span>
