--- a/portfolio.html
+++ b/portfolio.html
@@ -396,6 +396,11 @@
 							<i class="icon text-white icon_mail"></i>
 							<a href="contact.html" class="text-white"><span class="text-white"> Get in touch<i class="icon arrow_right"></i></span></a>
 							<br>
+							<div id="myIcons">
+								<a href="https://github.com/gar18/"> <i class="fa fa-github fa-4x"></i></a>
+								<a href="www.linkedin.com/in/gaarith-hendricks-544877195"> <i class="fa fa-linkedin-square fa-4x"></i></a>
+							</div>	
+							<br>
 							<br>
 							<span class="text-white">© 2019 Gaarith Hendricks </span>
 						</div>
