--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
 							<a href="contact.html" class="text-white"><span class="text-white"> Get in touch  <i class="icon arrow_right"></i></span></a>
 							<br>
 							<div id="myIcons">
-								<a href="https://github.com/gar18/"> <i class="fa fa-github fa-4x"></i></a>
-								<a href="www.linkedin.com/in/gaarith-hendricks-544877195"> <i class="fa fa-linkedin-square fa-4x"></i></a>
-							</div>	
+								<a href="https://github.com/gar18/" target="_blank"> <i class="fa fa-github fa-4x"></i></a>
+								<a href="www.linkedin.com/in/gaarith-hendricks-544877195" target="_blank"> <i class="fa fa-linkedin-square fa-4x"></i></a>
+							</div>
 							<br>
 							<br>
 							<span class="text-white">© 2019 Gaarith Hendricks </span>
