--- a/portfolio.html
+++ b/portfolio.html
@@ -398,7 +398,7 @@
 							<br>
 							<div id="myIcons">
 								<a href="https://github.com/gar18/" target="_blank"> <i class="fa fa-github fa-3x"></i></a>
-								<a href="www.linkedin.com/in/Gaarith-Hendricks" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i></a>
+								<a href="https://linkedin.com/in/Gaarith-Hendricks" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i></a>
 							</div>
 							<br>
 							<br>
