--- a/portfolio.html
+++ b/portfolio.html
@@ -367,7 +367,7 @@
 								
 								<div class="col-sm-6 col-md-pull-6">
 									<p>
-										At this stage I was hungry to learn. Especially for game development. Whilst studying through Life Choice Coding Academy 
+										At this stage I was eager to learn. Especially for game development. Whilst studying through Life Choice Coding Academy 
 									I am currenly juggling 2 other coursing per taining to Unity, UE4 and AI</p>
 								</div>
 								
